clusters/staging/apache2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache2-deployment
  namespace: www
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apache2
  template:
    metadata:
      labels:
        app: apache2
    spec:
      containers:
      - name: apache2-container
        image: httpd:latest
        ports:
        - containerPort: 80
