clusters/staging/apache2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache2-service
  namespace: www
spec:
  selector:
    app: apache2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
